--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "electron-squirrel-startup": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
