--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-jinke-music-player": "^4.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
