--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.5",
     "axios": "^0.24.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
