--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
