--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.0.5",
     "axios": "^0.24.0",
     "babel-polyfill": "^6.26.0",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
