--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
+    "mongodb": "^4.1.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "ytdl-core": "^4.9.1",
-    "ytsr": "^3.5.3"
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
