--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "axios": "^0.24.0",
     "babel-polyfill": "^6.26.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "mongodb": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-jinke-music-player": "^4.24.2",
-    "dotenv": "^10.0.0",
-    "mongodb": "^4.1.3"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
