--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-helmet": "^6.1.0",
     "react-jinke-music-player": "^4.24.2",
     "styled-components": "^5.3.3"
   },
