--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "mongodb": "^4.1.3",
     "react": "^16.5.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.5.2",
     "react-helmet": "^6.1.0",
     "react-jinke-music-player": "^4.24.2",
