remove unused db, update pkg.json to reflect icon dir change

--- a/electron/package.json
+++ b/electron/package.json
@@ -16,7 +16,7 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "icon": "icons/icon.png"
+        "icon": "public/icon.png"
       },
       "makers": [
         {
